# vigilant-bank

./: .gitignore  README.md  interceptor.py  pyproject.toml
config/: urls.py
config/settings/: base.py  local.py
core_apps/common/: apps.py
core_apps/user_auth/: apps.py  views.py
core_apps/user_profile/: apps.py
requirements/: base.txt  local.txt
