[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.15"
python-dotenv = "1.0.1"
djangorestframework = "3.15.2"
django-countries = "7.6.1"
django-phonenumber-field = "8.0.0"
phonenumbers = "8.13.42"
drf-spectacular = "0.27.2"
pillow = "10.4.0"
argon2-cffi = "23.1.0"
djoser = "2.2.3"
django-filter = "24.3"
django-celery-email = "3.0.0"
django-celery-beat = "2.6.0"
cloudinary = "1.39.1"
python-dateutil = "2.9.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
watchfiles = "^1.0.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
